fixed wrap overflow

--- a/src/app/tier-list/tier-list.component.css
+++ b/src/app/tier-list/tier-list.component.css
@@ -57,7 +57,6 @@
 
 ul.tier-list-body {
   width: calc(100% - 1rem);
-  height: 36.5rem;
   background-color: #1C2D4C;
   margin-top: 2.5rem;
   margin-left: 0.5rem;
@@ -72,8 +71,8 @@ ul.tier-list-body {
 
 li.tier-list-row {
   width: 100%;
-  height: 4rem;
   display: flex;
+  height: max-content;
 }
 
 div.tier-list-rank {
@@ -93,6 +92,7 @@ div.tier-list-rank span {
 
 ul.tier-list-items {
   display: flex;
+  height: max-content;
   gap: 0.5rem;
   flex-wrap: wrap;
   row-gap: 0.75rem;
@@ -103,7 +103,11 @@ ul.tier-list-items {
 
 li.tier-list-item {
   width: 6rem;
-  height: 100%;
+  height: 4rem;
   background-color: #6F8FAF;
   border-radius: 0.375rem;;
+}
+
+li.tier-list-item.filler {
+  flex-grow: 5;
 }
